--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <!-- BUILD PLUGIN VERSIONS -->
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
 
         <!-- SETTINGS FOR COPYING Pi4J ARTIFACTS TO DEVELOPMENT DEVICE/PLATFORM -->
         <!--
@@ -134,7 +135,7 @@
                     <executable>java</executable>
                     <arguments>
                         <argument>--module-path</argument>
-                        <modulepath/>
+                        <argument>${project.build.directory}/distribution</argument>
                         <argument>--module</argument>
                         <argument>com.pi4j.example/com.pi4j.example.MinimalExample</argument>
                     </arguments>
@@ -192,6 +193,44 @@
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
                             <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- OPTIONALLY DEPLOY THE FINAL JAR TO THE RASPBERRY PI -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>${maven-antrun-plugin.version}</version>
+                <executions>
+                    <!-- Copy the compiled JAR files to the Raspberry Pi -->
+                    <execution>
+                        <id>transfer-compiled-pi4j-jar</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <taskdef resource="net/sf/antcontrib/antcontrib.properties"
+                                    classpathref="maven.plugin.classpath" />
+                                <if>
+                                    <equals arg1="${pi4j.dev.transfer}" arg2="true" />
+                                    <then>
+                                        <!-- ensure the target directory exists on the Raspberry Pi -->
+                                        <sshexec host="${pi4j.dev.host}" port="${pi4j.dev.port}" username="${pi4j.dev.user}"
+                                            password="${pi4j.dev.password}" trust="true" failonerror="false"
+                                            verbose="false" command="mkdir --parents ${pi4j.dev.directory}" />
+
+                                        <!-- copy the JAR file to the Raspberry Pi -->
+                                        <scp file="${project.build.directory}/distributions/*"
+                                            todir="${pi4j.dev.user}:${pi4j.dev.password}@${pi4j.dev.host}:${pi4j.dev.directory}"
+                                            port="${pi4j.dev.port}" trust="true" verbose="false" failonerror="true">
+                                        </scp>
+                                    </then>
+                                </if>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
