--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- DEPENDENCIES VERSIONS -->
-        <slf4j.version>2.0.0-alpha0</slf4j.version>
-        <pi4j.version>2.0-SNAPSHOT</pi4j.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <pi4j.version>2.0</pi4j.version>
 
         <!-- BUILD PLUGIN VERSIONS -->
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
