--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ repositories {
 dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
-    implementation 'com.pi4j:pi4j-core:2.3.0'
-    implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.3.0'
-    implementation 'com.pi4j:pi4j-plugin-pigpio:2.3.0'
+    implementation 'com.pi4j:pi4j-core:2.5.0'
+    implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.5.0'
+    implementation 'com.pi4j:pi4j-plugin-gpiod:2.5.0'
 }
