--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
         <!-- DEPENDENCIES VERSIONS -->
         <slf4j.version>1.7.32</slf4j.version>
-        <pi4j.version>2.3.0</pi4j.version>
+        <pi4j.version>2.5.0</pi4j.version>
 
         <!-- BUILD PLUGIN VERSIONS -->
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
@@ -71,7 +71,7 @@
         </dependency>
         <dependency>
             <groupId>com.pi4j</groupId>
-            <artifactId>pi4j-plugin-pigpio</artifactId>
+            <artifactId>pi4j-plugin-gpiod</artifactId>
             <version>${pi4j.version}</version>
         </dependency>
     </dependencies>
