--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,23 +11,29 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        java-version: 11
+        distribution: 'temurin'
+        java-version: 17
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew build
+
     - name: Make staging directory
       run: mkdir staging
+
     - name: Copy JAR to staging
-      run: cp build/distribution/* staging   
+      run: cp build/distribution/* staging
+
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
