--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,21 +11,26 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        java-version: 11
+        distribution: 'temurin'
+        java-version: 17
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
     - name: Make staging directory
       run: mkdir staging
+
     - name: Copy JAR to staging
-      run: cp target/distribution/* staging   
+      run: cp target/distribution/* staging
+
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
