--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,8 +22,11 @@ jobs:
         distribution: 'temurin'
         java-version: 17
 
+    - name: Grant execute permission for mvnw
+      run: chmod +x mvnw
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: ./mvnw -B package --file pom.xml
 
     - name: Make staging directory
       run: mkdir staging
